--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -190,12 +190,13 @@
     display: flex;
     justify-content: space-between;
     // align-items: top;
-    box-sizing: border-box;
+    // box-sizing: border-box;
     margin: .4rem 0 .8rem 0;
   }
   
   .post-item-link {
-    width: 80%;
+    width: 90%;
+    max-width: 90%;
     overflow: hidden;
     text-align: left;
     text-overflow: ellipsis;
@@ -217,8 +218,7 @@
   .post-item-date {
     text-align: left;
     width: 10%;
-    font-variant-numeric: tabular-nums;
-    min-width: fit-content;
+    min-width: 4rem;
     [theme=dark] & {
       color: $global-font-secondary-color-dark;
     }
