--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -125,7 +125,7 @@ $pagination-link-hover-color-dark: #fff !default;
 // ========== Code ========== //
 // Color of the code
 $code-color: #272C34 !default;
-$code-color-dark: #E5BF78 !default;
+$code-color-dark: #f2f2f2 !default; //E5BF78
 
 
 // Color of the code background
