--- a/assets/css/_partial/_single/_toc.scss
+++ b/assets/css/_partial/_single/_toc.scss
@@ -111,7 +111,6 @@
 }
 
 .toc-static-style{
-  border-radius: 6px;
   background: darken($code-background-color, 3%);
 }
 
@@ -127,6 +126,7 @@
     display: flex;
     justify-content: space-between;
     
+    border-radius: 6px;
     line-height: 2em;
     padding: 0 .75rem;
     background: darken($code-background-color, 3%);
@@ -138,6 +138,7 @@
 
   .toc-content {
     background-color: $code-background-color;
+    border-radius: 0 0 6px 6px;
 
     > nav > ul {
       margin: 0;
@@ -151,11 +152,7 @@
 
   &.open {
     .toc-title {
-      // background: darken($code-background-color, 3%);
-
-      [theme=dark] & {
-        // background: darken($code-background-color-dark, 3%);
-      }
+      border-radius: 6px 6px 0 0;
     }
   }
 }
