--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -8,9 +8,11 @@ code {
   font-size: $code-font-size;
   font-family: $code-font-family;
   color: $code-color;
+  background: $code-background-color;
 
   [theme=dark] & {
     color: $code-color-dark;
+    background: $code-background-color-dark;
   }
 }
 
@@ -29,8 +31,8 @@ pre {
   }
 }
 
-code, pre, .highlight table, .highlight tr, .highlight td {
-  color: $code-color-dark;
+pre code, pre, .highlight table, .highlight tr, .highlight td {
+  color: $code-color-dark; 
   background: $code-background-color-dark;
 }
 
