--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,7 +10,13 @@
                     {{- with .pre -}}
                         <span class="header-title-pre">{{ . | safeHTML }}</span>
                     {{- end -}}
+                    {{- with .preName -}}
+                        <span class="header-title-inner">{{ . | safeHTML }}</span>
+                    {{- end -}}
                     {{- .name -}}
+                    {{- with .postName -}}
+                        <span class="header-title-inner">{{ . | safeHTML }}</span>
+                    {{- end -}}
                     {{- with .post -}}
                         <span class="header-title-post">{{ . | safeHTML }}</span>
                     {{- end -}}
@@ -60,7 +66,7 @@
                     <span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="{{ .Site.Params.search.placeholder | default (T `searchPlaceholder`) }}" id="search-input-desktop">
                         <a href="#" onclick="return false;" class="search-button search-toggle" id="search-toggle-desktop" title="{{ T `search` }}">
-                            <i class="fas fa-search fa-fw"></i>
+                            <i class="fas fa-search fas"></i>
                         </a>
                         <a href="#" onclick="return false;" class="search-button search-clear" id="search-clear-desktop" title="{{ T `clear` }}">
                             <i class="fas fa-times-circle fa-fw"></i>
