--- a/assets/css/_partial/_single/_footer.scss
+++ b/assets/css/_partial/_single/_footer.scss
@@ -28,6 +28,7 @@
         width: 100%;
         text-align: right;
         margin: 1rem 0 0.5rem 0;
+        font-size: 0.875rem;
       }
 
       .post-info-license {
