--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -99,10 +99,16 @@
                         {{- with .pre -}}
                             <span class="header-title-pre">{{ . | safeHTML }}</span>
                         {{- end -}}
-                        {{- .name -}}
-                        {{- with .post -}}
-                            <span class="header-title-post">{{ . | safeHTML }}</span>
+                        {{- with .preName -}}
+                            <span class="header-title-inner">{{ . | safeHTML }}</span>
                         {{- end -}}
+                        {{- .name -}}
+                        {{- with .postName -}}
+                            <span class="header-title-inner">{{ . | safeHTML }}</span>
+                        {{- end -}}
+                        <!-- {{- with .post -}}
+                            <span class="header-title-post">{{ . | safeHTML }}</span>
+                        {{- end -}} -->
                     {{- else -}}
                         {{- .Site.Title -}}
                     {{- end -}}
