--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -14,7 +14,7 @@ $global-background-color: #fff !default;
 $global-background-color-dark: #292a2d !default;
 
 // Footer color
-$footer-color: rgb(90, 90, 90);
+$footer-color: #64748b;
 $footer-color-dark: rgb(150, 150, 150);
 
 // Color of the text
