--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -3,14 +3,13 @@
 
 .single {
   .single-title {
-    margin: 2rem 0 .5rem;
+    margin: 1rem 0 0.5rem 0;
     font-size: 1.8rem;
     font-weight: bold;
-    line-height: 140%;
   }
 
   .single-subtitle {
-    margin: .4rem 0;
+    margin: .25rem 0;
     font-size: 1.2rem;
     font-weight: normal;
     font-style: italic;
