--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 
 {{- define "content" -}}
     {{- $params := .Scratch.Get "params" -}}
-    <div class="page single special">
+    <div class="page home special">
         {{- if $params.showTitle -}}
             {{- /* Title */ -}}
             <h1 class="single-title">
