--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -1,9 +1,9 @@
 .home {
   .home-profile {
-    @include transform(translateY( 16vh));
-    padding: 1rem 0 2rem 0;
+    // @include transform(translateY( 16vh));
+    padding: 1rem 0;
     text-align: center;
-    margin-bottom: 5rem;
+    margin-bottom: 1.5rem;
 
     .home-avatar {
       padding: .5rem;
@@ -229,7 +229,7 @@
   }
 
   .group-title {
-    margin-top: 3rem;
+    margin-top: 1rem;
     margin-bottom: 1.5rem;
   }
 }
