--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -6,6 +6,7 @@
     margin: 1rem 0 0.5rem 0;
     font-size: 1.8rem;
     font-weight: bold;
+    line-height: 2.25rem;
   }
 
   .single-subtitle {
