--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -189,7 +189,8 @@
     font-size: 1.125rem;
     display: flex;
     justify-content: space-between;
-    margin: .4rem 0 .8rem 0;
+    line-height: 2.5rem;
+    // margin: .6rem 0;
   }
   
   .post-item-link {
@@ -229,7 +230,7 @@
   }
 
   .group-title {
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
   }
 }
