--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -286,7 +286,7 @@ $code-highlight-color-map-dark: (
   /* KeywordReserved */ 'kr': #f97316,
   /* KeywordType */ 'kt': #facc15,
   /* Name */ 'n': #cbd5e1,
-  /* NameAttribute */ 'na': #111618,
+  /* NameAttribute */ 'na': #cbd5e1,
   /* NameBuiltin */ 'nb': #19b9c4,
   /* NameBuiltinPseudo */ 'bp': #facc15,
   /* NameClass */ 'nc': #facc15,
