--- a/assets/css/_partial/_header.scss
+++ b/assets/css/_partial/_header.scss
@@ -157,31 +157,32 @@ header {
 #header-desktop {
   display: block;
   position: fixed;
-  // height: $header-height;
-  line-height: $header-height;
 
   [header-desktop=normal] & {
     position: static;
   }
 
   .header-wrapper {
-    padding: 2rem 0.5rem 1rem 0.5rem;
+    display: block;
+    padding: 2rem 0.5rem 0.5rem 0.5rem;
     margin: auto;
 
     .header-title {
       font-size: $header-title-font-size;
+      margin: 1rem 0;
     }
 
     .menu {
       overflow: hidden;
       white-space: nowrap;
+      font-size: 0.875rem;
 
       .menu-inner {
-        float: right;
+        float: left;
       }
 
       .menu-item {
-        margin: 0 .125rem;
+        margin-right: 1rem;
 
         &.delimiter {
           border-left: 1.5px solid $global-font-color;
@@ -204,13 +205,8 @@ header {
         }
       }
 
-      a.active {
-        font-weight: 900;
-        color: $header-hover-color;
-
-        [theme=dark] & {
-          color: $header-hover-color-dark;
-        }
+      a {
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, transparent), color-stop(70%, rgba($single-link-color,0.5)));
       }
     }
   }
